lxl-service-mesh-movie/istio/movie.yaml
##################################################################################################
# neo4j service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: neo4j-server
spec:
  ports:
  - port: 7474
    name: http
    nodePort: 31001
  - port: 7687
    name: blot
    nodePort: 31002
  selector:
    app: neo4j-app
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j-deployment
  labels:
    app: neo4j-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j-app
  template:
    metadata:
      labels:
        app: neo4j-app
    spec:
      containers:
      - name: neo4j
        image: neo4j:4.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7474
        - containerPort: 7687
---
##################################################################################################
# movie info service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: movie-info
spec:
  ports:
  - port: 18082
    name: http
  selector:
    app: movie-info-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-info-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movie-info-app
      version: v1
  template:
    metadata:
      labels:
        app: movie-info-app
        version: v1
    spec:
      containers:
      - name: movie-info
        image: registry.cn-hangzhou.aliyuncs.com/itcast/itcast-service-mesh-movie-info:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 18082
---
##################################################################################################
# movie recommend service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: movie-recommend
spec:
  ports:
  - port: 18083
    name: http
  selector:
    app: movie-recommend-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-recommend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie-recommend-app
      version: v1
  template:
    metadata:
      labels:
        app: movie-recommend-app
        version: v1
    spec:
      containers:
      - name: movie-recommend
        image: registry.cn-hangzhou.aliyuncs.com/itcast/itcast-service-mesh-movie-recommend:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 18083
---
##################################################################################################
# movie rating service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: movie-rating
spec:
  ports:
  - port: 18084
    name: http
  selector:
    app: movie-rating-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-rating-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-rating-app
      version: v1
  template:
    metadata:
      labels:
        app: movie-rating-app
        version: v1
    spec:
      containers:
      - name: movie-rating
        image: registry.cn-hangzhou.aliyuncs.com/itcast/itcast-service-mesh-movie-rating:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 18083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-rating-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-rating-app
      version: v2
  template:
    metadata:
      labels:
        app: movie-rating-app
        version: v2
    spec:
      containers:
      - name: movie-rating
        image: registry.cn-hangzhou.aliyuncs.com/itcast/itcast-service-mesh-movie-rating:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 18083
---
##################################################################################################
# movie web service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: movie-web
spec:
  ports:
  - port: 18081
    name: http
  selector:
    app: movie-web-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie-web-app
      version: v1
  template:
    metadata:
      labels:
        app: movie-web-app
        version: v1
    spec:
      containers:
      - name: movie-web
        image: registry.cn-hangzhou.aliyuncs.com/itcast/itcast-service-mesh-movie-web:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 18081
---
